COdigo completo visual ok

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"wait_time": 100, "messages_before_break": 50, "telefones": "C:/Users/futur/Desktop/-/bot-teste/telefones.txt", "mensagem": "C:/Users/futur/Desktop/-/bot-teste/mensagem.txt"}
+{"wait_time": 500, "messages_before_break": 25, "telefones": "", "mensagem": ""}
